--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-OPENAI_API_KEY='<YOUR_API_KEY>'
+OPENAI_API_KEY="<YOUR_API_KEY>"
+
+TELEGRAM_CHAT_ID = "<YOUR_TELEGRAM_CHAT_ID>"
+TELEGRAM_BOT_TOKEN = "<YOUR_TELEGRAM_BOT_TOKEN>"
+
+# https://api.imgur.com/oauth2/addclient
+IMGUR_CLIENT_ID = "<YOUR_IMGUR_CLIENT_ID>"
+IMGUR_CLIENT_SECRET = "<YOUR_IMGUR_CLIENT_SECRET>"
+
+# huggingface TOKEN model name: image_model_comparision
+HF_TOKEN= "<YOUR_HF_TOKEN>"
+HF_URL= "<YOUR_HF_URL>"
+
+#for images https://unsplash.com/
+UNSPLASH_ACCESS_KEY = "<YOUR_UNSPLASH_ACCESS_KEY>"
+
+# https://aihorde.net/api/
+AI_HORDE_API_KEY = "<YOUR_AI_HORDE_API_KEY>"
+
