--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,10 +2,25 @@
 hideTopBar = true
 
 [theme]
-base = "white" 
+base = "light" 
+primaryColor = "#F63366"
+backgroundColor = "white"
+font = "sans serif"
+
+[global]
+disableWidgetStateDuplicationWarning = false
+
+[logger]
+level = "error"
+messageFormat = "%(asctime)s %(message)s"
+
+[client]
+showErrorDetails = false
+toolbarMode = "minimal"
 
 [server]
-maxUploadSize = 25
+maxUploadSize = 1
 
 [browser]
+fileWatcherType = "auto"
 gatherUsageStats = false
