--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ myenv
 # Ignore all __pycache__ directories
 **/__pycache__/
 *.txt
-*.pkl
+# *.pkl
 data/user_count.json
 utils/__pycache__/init.cpython-312.pyc
 aviad_chatbot.code-workspace
