change to @st.cache_data(show_spinner=False, ttl=None)

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -20,6 +20,8 @@ toolbarMode = "minimal"
 
 [server]
 maxUploadSize = 1
+enableCORS = false
+enableXsrfProtection = false
 
 [browser]
 fileWatcherType = "auto"
