add youtube videos

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-LLM_API_KEY="<YOURS>"
+MODEL_TYPE="<YOURS>"
+MAX_TOKENS=<YOURS>
+OPENAI_API_KEY="<YOURS>"
 EMBEDDINGS_MODEL="<YOURS>"
 LLM_MODEL="<YOURS>"
 
